// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`communication/send-sms/twilio RetrieveMessageStatus should perform successfully 1`] = `
Ok {
  "value": Object {
    "deliveryStatus": "accepted",
  },
}
`;

exports[`communication/send-sms/twilio SendMessage should perform successfully 1`] = `
Ok {
  "value": Object {
    "messageId": "SMf64014960e8f40e9bc41f9f94a14f972",
  },
}
`;
